show-raw-material button spacing bug fix

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -16,7 +16,3 @@ p.title {
     font-weight: bolder;
     text-align: center;
 }
-
-.input-group-btn.input-space {
-    padding-left: 15px;
-}
